--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -1,170 +1,172 @@
+exclude: 'app/styles/vendor/**'
+
 linters:
 
-	BangFormat:
-		enabled: true
-		space_before_bang: true
-		space_after_bang: false
+  BangFormat:
+    enabled: true
+    space_before_bang: true
+    space_after_bang: false
 
-	BemDepth:
-		enabled: true
+  BemDepth:
+    enabled: true
 
-	BorderZero:
-		enabled: true
+  BorderZero:
+    enabled: true
 
-	ColorKeyword:
-		enabled: true
+  ColorKeyword:
+    enabled: true
 
-	Comment:
-		enabled: true
+  Comment:
+    enabled: true
 
-	DebugStatement:
-		enabled: true
+  DebugStatement:
+    enabled: true
 
-	DeclarationOrder:
-		enabled: true
+  DeclarationOrder:
+    enabled: true
 
-	DuplicateProperty:
-		enabled: true
+  DuplicateProperty:
+    enabled: true
 
-	ElsePlacement:
-		enabled: true
+  ElsePlacement:
+    enabled: true
 
-	EmptyLineBetweenBlocks:
-		enabled: true
-		ignore_single_line_blocks: false
+  EmptyLineBetweenBlocks:
+    enabled: true
+    ignore_single_line_blocks: false
 
-	EmptyRule:
-		enabled: true
+  EmptyRule:
+    enabled: true
 
-	FinalNewline:
-		enabled: true
+  FinalNewline:
+    enabled: true
 
-	HexLength:
-		enabled: true
+  HexLength:
+    enabled: true
 
-	HexNotation:
-		enabled: true
+  HexNotation:
+    enabled: true
 
-	HexValidation:
-		enabled: true
+  HexValidation:
+    enabled: true
 
-	IdSelector:
-		enabled: true
+  IdSelector:
+    enabled: true
 
-	ImportPath:
-		enabled: true
+  ImportPath:
+    enabled: true
 
-	Indentation:
-		enabled: true
-		character: tab
-		width: 1
+  Indentation:
+    enabled: true
+    character: tab
+    width: 1
 
-	LeadingZero:
-		enabled: true
+  LeadingZero:
+    enabled: true
 
-	MergeableSelector:
-		enabled: true
+  MergeableSelector:
+    enabled: true
 
-	NameFormat:
-		enabled: false
-		convention: hyphenated_lowercase
+  NameFormat:
+    enabled: false
+    convention: hyphenated_lowercase
 
-	NestingDepth:
-		enabled: true
-		max_depth: 3
+  NestingDepth:
+    enabled: true
+    max_depth: 3
 
-	PlaceholderInExtend:
-		enabled: true
+  PlaceholderInExtend:
+    enabled: true
 
-	PropertyCount:
-		enabled: false
+  PropertyCount:
+    enabled: false
 
-	PropertySortOrder:
-		enabled: true
-		order: smacss
+  PropertySortOrder:
+    enabled: true
+    order: smacss
 
-	PropertySpelling:
-		enabled: true
+  PropertySpelling:
+    enabled: true
 
-	QualifyingElement:
-		enabled: true
+  QualifyingElement:
+    enabled: true
 
-	SelectorDepth:
-		enabled: true
-		max_depth: 3
+  SelectorDepth:
+    enabled: true
+    max_depth: 3
 
-	SelectorFormat:
-		enabled: false
-		#class_convention: '^(?:u|is|has)\-[a-z][a-zA-Z0-9]*$|^(?!u|is|has)[a-zA-Z][a-zA-Z0-9]*(?:\-[a-z][a-zA-Z0-9]*)?(?:\-\-[a-z][a-zA-Z0-9]*)?$'
+  SelectorFormat:
+    enabled: false
+    #class_convention: '^(?:u|is|has)\-[a-z][a-zA-Z0-9]*$|^(?!u|is|has)[a-zA-Z][a-zA-Z0-9]*(?:\-[a-z][a-zA-Z0-9]*)?(?:\-\-[a-z][a-zA-Z0-9]*)?$'
 
-	Shorthand:
-		enabled: true
+  Shorthand:
+    enabled: true
 
-	SingleLinePerProperty:
-		enabled: true
-		allow_single_line_rule_sets: false
+  SingleLinePerProperty:
+    enabled: true
+    allow_single_line_rule_sets: false
 
-	SingleLinePerSelector:
-		enabled: true
+  SingleLinePerSelector:
+    enabled: true
 
-	SpaceAfterComma:
-		enabled: true
+  SpaceAfterComma:
+    enabled: true
 
-	SpaceAfterPropertyColon:
-		enabled: true
-		style: one_space
+  SpaceAfterPropertyColon:
+    enabled: true
+    style: one_space
 
-	SpaceAfterPropertyName:
-		enabled: true
+  SpaceAfterPropertyName:
+    enabled: true
 
-	SpaceAfterVariableName:
-		enabled: true
+  SpaceAfterVariableName:
+    enabled: true
 
-	SpaceAroundOperator:
-		enabled: true
+  SpaceAroundOperator:
+    enabled: true
 
-	SpaceBeforeBrace:
-		enabled: true
-		style: space
-		allow_single_line_padding: true
+  SpaceBeforeBrace:
+    enabled: true
+    style: space
+    allow_single_line_padding: true
 
-	SpaceBetweenParens:
-		enabled: true
-		spaces: 0
+  SpaceBetweenParens:
+    enabled: true
+    spaces: 0
 
-	StringQuotes:
-		enabled: true
-		style: single_quotes
+  StringQuotes:
+    enabled: true
+    style: single_quotes
 
-	TrailingSemicolon:
-		enabled: true
+  TrailingSemicolon:
+    enabled: true
 
-	TrailingWhitespace:
-		enabled: true
+  TrailingWhitespace:
+    enabled: true
 
-	TrailingZero:
-		enabled: true
+  TrailingZero:
+    enabled: true
 
-	UnnecessaryMantissa:
-		enabled: true
+  UnnecessaryMantissa:
+    enabled: true
 
-	UnnecessaryParentReference:
-		enabled: true
+  UnnecessaryParentReference:
+    enabled: true
 
-	UrlFormat:
-		enabled: true
+  UrlFormat:
+    enabled: true
 
-	UrlQuotes:
-		enabled: true
+  UrlQuotes:
+    enabled: true
 
-	VariableForProperty:
-		enabled: true
-		properties:
-			- color
-			- font
+  VariableForProperty:
+    enabled: true
+    properties:
+      - color
+      - font
 
-	VendorPrefixes:
-		enabled: true
+  VendorPrefixes:
+    enabled: true
 
-	ZeroUnit:
-		enabled: true
+  ZeroUnit:
+    enabled: true
