--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "1.13.6",
+    "ember-cli": "^1.13.8",
     "ember-cli-app-version": "0.4.0",
+    "ember-cli-autoprefixer": "0.4.1",
     "ember-cli-babel": "^5.0.0",
+    "ember-cli-build-notifications": "0.0.3",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-htmlbars": "0.7.9",
