--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "ember-data": "1.13.7",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
-    "ember-i18n": "4.1.1"
+    "ember-intl": "2.0.0-beta.22"
   }
 }
