--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
+    "broccoli-funnel": "^0.2.8",
     "ember-cli": "^1.13.8",
     "ember-cli-app-version": "0.4.0",
     "ember-cli-autoprefixer": "0.4.1",
