--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
-    "reset-css": "~2.0.2011012602"
+    "reset-css": "~2.0.2011012602",
+    "spinners": "~1.2.2",
+    "MathJax": "~2.5.3"
   }
 }
