npm installs bower

--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
     "ember-intl": "2.0.0-beta.24"
+  },
+  "dependencies": {
+    "bower": "^1.5.3"
   }
 }
