--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "bower": "^1.5.3",
     "broccoli-asset-rev": "^2.0.2",
     "broccoli-funnel": "^0.2.8",
     "ember-cli": "^1.13.8",
@@ -41,8 +42,5 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
     "ember-intl": "2.0.0-beta.24"
-  },
-  "dependencies": {
-    "bower": "^1.5.3"
   }
 }
