--- a/.eslintrc
+++ b/.eslintrc
@@ -8,9 +8,9 @@
     "modules": true
   },
   "rules": {
-    "brace-style": [2, "1tbs", { "allowSingleLine": true }],
+    "brace-style": [2, "1tbs", {"allowSingleLine": true}],
     "computed-property-spacing": [1, "never"],
-    "indent": [2, "tab", {"indentSwitchCase": true}],
+    "indent": [2, 2],
     "linebreak-style": [2, "unix"],
     "no-lonely-if": 1,
     "no-multiple-empty-lines": 1,
