--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "leibniz-frontend",
   "dependencies": {
-    "ember": "2.1.0",
+    "ember": "^2.1.0",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-data": "2.1.0",
+    "ember-data": "^2.1.0",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
     "ember-qunit": "0.4.7",
     "ember-qunit-notifications": "0.0.7",
@@ -15,5 +15,8 @@
     "reset-css": "~2.0.2011012602",
     "spinners": "~1.2.2",
     "MathJax": "~2.5.3"
+  },
+  "resolutions": {
+    "ember": "^2.1.0"
   }
 }
