Improve performance when resizing content
Redraw variants only after transitions have completed and make sure
that click triggers are only bound once.

--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "qunit": "~1.17.1",
     "reset-css": "~2.0.2011012602",
     "spinners": "~1.2.2",
-    "MathJax": "~2.5.3"
+    "MathJax": "~2.5.3",
+    "javascript-detect-element-resize": "~0.5.3"
   },
   "resolutions": {
     "ember": "^2.1.0"
