--- a/package.json
+++ b/package.json
@@ -19,27 +19,27 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.2",
-    "broccoli-funnel": "^0.2.8",
-    "ember-cli": "^1.13.8",
-    "ember-cli-app-version": "0.4.0",
-    "ember-cli-autoprefixer": "0.4.1",
-    "ember-cli-babel": "^5.0.0",
-    "ember-cli-build-notifications": "0.0.3",
+    "broccoli-asset-rev": "^2.3.0",
+    "broccoli-funnel": "^1.0.0",
+    "ember-cli": "1.13.12",
+    "ember-cli-app-version": "^1.0.0",
+    "ember-cli-autoprefixer": "0.5.0",
+    "ember-cli-babel": "^5.1.6",
+    "ember-cli-build-notifications": "0.1.0",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.0.0",
-    "ember-cli-htmlbars": "0.7.9",
-    "ember-cli-htmlbars-inline-precompile": "^0.1.1",
-    "ember-cli-ic-ajax": "0.2.1",
-    "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.18",
-    "ember-cli-release": "0.2.3",
-    "ember-cli-sass": "^5.0.1",
-    "ember-cli-sri": "^1.0.1",
-    "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.13.7",
-    "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3",
-    "ember-intl": "2.0.0-beta.24"
+    "ember-cli-dependency-checker": "^1.1.0",
+    "ember-cli-htmlbars": "^1.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
+    "ember-cli-ic-ajax": "0.2.4",
+    "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-qunit": "^1.0.4",
+    "ember-cli-release": "0.2.8",
+    "ember-cli-sass": "^5.1.0",
+    "ember-cli-sri": "^1.1.0",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-data": "2.1.0",
+    "ember-disable-proxy-controllers": "^1.0.1",
+    "ember-export-application-global": "^1.0.5",
+    "ember-intl": "2.0.0-rc.5"
   }
 }
