--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": ">= 0.12.0"
   },
   "author": "",
-  "license": "MIT",
+  "license": "AGPL-3.0",
   "devDependencies": {
     "broccoli-asset-rev": "^2.3.0",
     "broccoli-funnel": "^1.0.0",
