--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "AGPL-3.0",
   "devDependencies": {
+    "bower": "^1.7.7",
     "broccoli-asset-rev": "^2.3.0",
     "broccoli-funnel": "^1.0.0",
     "ember-cli": "1.13.13",
