--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ task emberBuildDev(type: Exec) {
   description = "Build development server"
   dependsOn npmPackages, bowerInstall
 
-  commandLine "ln", "-s", "/usr/bin/nodejs", "/usr/bin/node"
+  commandLine "ln", "-fs", "/usr/bin/nodejs", "/usr/local/bin/node"
   commandLine "node_modules/ember-cli/bin/ember", "build", "--", "environment", "development"
 
 }
