--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "ember-data": "2.1.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.5",
-    "ember-intl": "2.0.0-rc.5"
+    "ember-intl": "2.9.3"
   }
 }
