--- a/bower.json
+++ b/bower.json
@@ -1,22 +1,11 @@
 {
   "name": "leibniz-frontend",
   "dependencies": {
-    "ember": "^2.1.0",
-    "ember-cli-shims": "0.0.6",
-    "ember-cli-test-loader": "0.2.1",
-    "ember-data": "^2.1.0",
-    "ember-load-initializers": "0.1.7",
-    "ember-qunit": "0.4.16",
+    "ember": "~2.6.0",
+    "ember-cli-shims": "0.1.1",
+    "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
-    "ember-resolver": "~0.1.20",
-    "jquery": "^1.11.3",
-    "loader.js": "ember-cli/loader.js#3.4.0",
-    "qunit": "~1.20.0",
-    "reset-css": "~2.0.2011012602",
-    "javascript-detect-element-resize": "~0.5.3"
-  },
-  "resolutions": {
-    "ember": "^2.1.0",
-    "qunit-notifications": "~0.1.0"
+    "javascript-detect-element-resize": "^0.5.3",
+    "reset-css": "^2.0.2011012603"
   }
 }
