--- a/package.json
+++ b/package.json
@@ -14,33 +14,33 @@
   },
   "repository": "",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 10.0.0"
   },
   "author": "",
   "license": "AGPL-3.0",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.2",
-    "broccoli-funnel": "^1.0.0",
-    "ember-ajax": "^2.0.1",
-    "ember-cli": "2.6.2",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-autoprefixer": "0.6.0",
-    "ember-cli-babel": "^5.1.6",
-    "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-htmlbars": "^1.0.3",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-jshint": "^1.0.0",
-    "ember-cli-qunit": "^1.4.0",
-    "ember-cli-release": "^0.2.9",
-    "ember-cli-sass": "^5.1.0",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^1.2.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-intl": "2.12.4",
-    "ember-load-initializers": "^0.5.1",
-    "ember-resolver": "^2.0.3",
-    "ember-welcome-page": "^1.0.1",
-    "loader.js": "^4.0.1"
+    "broccoli-asset-rev": "3.0.0",
+    "broccoli-funnel": "2.0.1",
+    "ember-ajax": "4.0.2",
+    "ember-cli": "3.6.1",
+    "ember-cli-app-version": "3.2.0",
+    "ember-cli-autoprefixer": "0.8.1",
+    "ember-cli-babel": "6.17.2",
+    "ember-cli-dependency-checker": "3.1.0",
+    "ember-cli-htmlbars": "3.0.1",
+    "ember-cli-htmlbars-inline-precompile": "2.1.0",
+    "ember-cli-inject-live-reload": "2.0.1",
+    "ember-cli-jshint": "2.0.1",
+    "ember-cli-qunit": "4.4.0",
+    "ember-cli-release": "1.0.0-beta.2",
+    "ember-cli-sass": "7.2.0",
+    "ember-cli-sri": "2.1.1",
+    "ember-cli-uglify": "2.1.0",
+    "ember-export-application-global": "2.0.0",
+    "ember-intl": "3.5.0",
+    "ember-load-initializers": "2.0.0",
+    "ember-resolver": "5.0.1",
+    "ember-welcome-page": "3.2.0",
+    "loader.js": "4.7.0"
   }
 }
